<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="br.com.strongreen.championcooper.CadastroActivity"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtChamada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Faça seu cadastro para participar!"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nome"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtnome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/NomeCompleto"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Telefone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/txtCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CPF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Genero"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdBtnFem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Feminino" />

            <RadioButton
                android:id="@+id/rdBtnMasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Masculino" />

        </RadioGroup>

        <TextView
            android:id="@+id/txtDataNas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DataNascimento"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/txtMod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Modalidade"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spnMod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@array/categorias" />

        <Button
            android:id="@+id/btnConfirma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirmar Cadastro" />

    </LinearLayout>
</ScrollView>
